fixed button spacing, video

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,6 +91,7 @@ button {
   color: white;
   background-color: rgba(10,10,10, 0);
   margin:2%;
+  flex:1;
 }
 
 .tab:hover{
